--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^2.22.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.7",
-    "dotenv": "^8.2.0"
+    "graphql": "^15.5.0",
+    "nodemon": "^2.0.7"
   }
 }
